# ai_screener_stock_auto_swing_trade

./: .gitignore  .pre-commit-config.yml  README.md  Tutorial.ipynb  app.py  failed_pdfs.csv  my_top_gainer_notes.txt  pyproject.toml  start_project.bat  upstox_token.json
helpers/: FnO.py  datahandler.py  nse_data.py
news_based_stock_cohere/: stock_news_today.csv  stock_news_today_11-may-2025.csv  stock_news_today_12-may-2025.csv  stock_news_today_13-may-2025.csv  stock_news_today_14-may-2025.csv  stock_news_today_{today}.csv
news_based_stock_cohere/news_stock_extract/: config.py  get_news_stock_finchat.py  get_today_news_stock.py
output/: process_sentiment_anaylsis_2025-06-02.csv  screener_top_gainers.csv
screener_folder/: pattern_detection.py  top_gainers_scraper.py
stock_news_analysis/: README.md  app.py  main.py
stock_news_analysis/algo_trading/: gtt_order_place.py
stock_news_analysis/analysis/: data_save_csv.py  extract_text_from_pdf.py  preprocess.py  read_latest_csv.py  sentiment_analysis.py  text_summarizer_cohere.py
stock_news_analysis/backup/: CF-AN-equities-02-06-2025-to-02-06-2025.csv  CF-AN-equities-03-06-2025-to-03-06-2025.csv  CF-AN-equities-04-06-2025-to-04-06-2025.csv  CF-AN-equities-05-06-2025-to-05-06-2025 (1).csv  CF-AN-equities-05-06-2025-to-05-06-2025.csv  chart_pattern_2025-05-25.csv  process_sentiment_anaylsis_2025-06-03.csv  screener_announcements_2025-05-15.csv  screener_announcements_2025-05-16.csv  screener_announcements_2025-05-17.csv  screener_announcements_2025-05-18.csv  screener_announcements_2025-05-19.csv  screener_announcements_2025-05-20.csv  screener_announcements_2025-05-21.csv  screener_bse_announcements_2025-05-22.csv  screener_bse_announcements_2025-05-23.csv  (+3 more)
test_helper/: test_datahandler.py
utility/: debbuger_port_driver.py  my_automation_logger.py
(+19 files in other folders)
