[tool.poetry]
name = "nse_stock_scanner"
version = "0.1.0"
description = "Data Standardization project"
authors = ["Irshad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "1.34.84"
botocore = ">=1.34.84,<1.35.0"
pandas = "2.1.4"
pyarrow = "14.0.0"
redshift-connector = "2.0.918"
sagemaker = "2.212.0"
smart-open = "5.2.1"
starlette = "0.27.0"
pyodbc = "5.0.1"
pipeline = "^0.1.0"
polars = "0.20.6"
requests = "2.31.0"
responses = "0.18.0"
s3transfer = "0.10.1"
jupyter = "^1.0.0"
notebook = "^6.5.6"
nbclassic = "^0.5.5"
debugpy = "1.8.0"
azure-devops = "^7.1.0b4"
schedule = "^1.2.2"
selenium = "^4.25.0"
ruff = "^0.7.0"
pre-commit = "^4.0.1"
openai = "^1.58.1"
pywhatkit = "^5.4"
pynput = "^1.8.0"
pyspark = "3.3.2"
python-docx = "^1.1.2"
markdownify = "^1.1.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
pytz = "^2024.1"
cohere = "^4.40"
fake-useragent = "^1.5.1"
nltk = "^3.9.1"
docx2pdf = "^0.1.8"
pytest = "^8.3.4"
pyautogui = "^0.9.54"
pyscreeze = "^1.0.1"
pillow = "10.1.0"
opencv-python = "^4.11.0.86"
numpy = "1.26.4"
scipy = "1.13.0"
ta = "^0.11.0"
matplotlib = "3.8.3"
seaborn = "0.13.2"
mplfinance = "0.12.10b0"
bokeh = "3.3.4"
backtesting = "0.3.3"
yfinance = "0.2.40"
ccxt = "4.1.89"
scikit-learn = "1.4.2"
tensorflow = "2.16.1"
torch = "2.2.2"
transformers = "4.40.0"
websockets = "12.0"
jsonschema = "4.22.0"
attrs = ">=22.2.0"
lxml = ">=4.9.1"
typing-extensions = ">=4.8.0"
urllib3 = "1.26.8"
streamlit = "^1.32.0"
plotly = "^5.19.0"
gspread = "^5.12.4"
oauth2client = "^4.1.3"
nsepy = "0.8"
PyMuPDF = "^1.23.25"
textblob = "^0.17.1"
clean-text = "^0.6.0"
streamlit-extras = "^0.3.5"
streamlit-autorefresh = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
